fix: footer is too small to read

--- a/_common/css/style.css
+++ b/_common/css/style.css
@@ -164,7 +164,7 @@ section.fullpage article {
 }
 
 footer {
-  font-size: .7em;
+  font-size: .9em;
   color: var(--color-tinted-text);
 }
 
